feact(login - task): creación de tarea y login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=calendarApp
+
+spring.datasource.url=jdbc:sqlite:task_scheduler.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=com.calendarApp.calendarApp.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+logging.level.org.springframework.security=DEBUG
+
